# pw-05-backend/src/main/swagger/api-specification.yaml
@@ -13,18 +13,18 @@ paths:
                  # DEVICES-DATA
 
   /device-data:
-    get:
-      operationId: getDeviceData
-      produces:
+    put:
+      operationId: addDeviceData
+      consumes:
         - application/json
+      parameters:
+        - in: body
+          name: deviceData
+          schema:
+            $ref: '#/definitions/DeviceData'
       responses:
         '200':
-          description: >-
-            Successful response, with a representation of the device data.
-          schema:
-            type: array
-            items:
-              $ref: '#/definitions/DeviceData'
+          description: OK  
                 
                  # PLANS
      
@@ -343,11 +343,8 @@ definitions:
   DeviceData:
     type: object
     properties:
-      id:
-        type: integer
-        format: int64
       objectId:
-        type: number
+        type: string
         description: Tracking object indentif. code
       signal:
         type: number
@@ -416,8 +413,6 @@ definitions:
       beaconId:
         type: string
         description: Beacon identification code
-      batteryStatus:
-        type: number
       
   BeaconInPlan:
     type: object
